--- a/index.html
+++ b/index.html
@@ -255,10 +255,10 @@
             <a href="#" class="logo">中哈<span>文化云脉</span></a>
             <nav>
                 <ul>
-                    <li><a href="https://zhwhym.github.io/1//">首页</a></li>
-                    <li><a href="https://yuteng0412.github.io/shouye2/">走近哈萨克斯坦</a></li>
-                    <li><a href="https://yuteng0412.github.io/shouye3/">相关资料</a></li>
-                    <li><a href="https://yuteng0412.github.io/shouye4/">公众号</a></li>
+                   <li><a href="https://zhwhym.github.io/1//">首页</a></li>
+                    <li><a href="https://zhwhym.github.io/2//">走近哈萨克斯坦</a></li>
+                    <li><a href="https://zhwhym.github.io/3//">相关资料</a></li>
+                    <li><a href="https://zhwhym.github.io/4//">公众号</a></li>
                 </ul>
             </nav>
         </div>
