--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>哈萨克斯坦小知识 | 简讯新闻</title>
+    <title>哈萨克斯坦小知识</title>
     <style>
         /* 基础样式 */
         * {
